@@ -21,6 +21,7 @@ AM_CPPFLAGS = \
 @ELEMENTARY_EDBUS_CFLAGS@ \
 @ELEMENTARY_EDBUS2_CFLAGS@ \
 @ELEMENTARY_EFREET_CFLAGS@ \
+@ELEMENTARY_ELOCATION_CFLAGS@ \
 @ELEMENTARY_EWEATHER_CFLAGS@ \
 @ELEMENTARY_ETHUMB_CFLAGS@ \
 @ELEMENTARY_WEB_CFLAGS@ \
@@ -312,6 +313,7 @@ libelementary_la_LIBADD = \
 @ELEMENTARY_EDBUS_LIBS@ \
 @ELEMENTARY_EDBUS2_LIBS@ \
 @ELEMENTARY_EFREET_LIBS@ \
+@ELEMENTARY_ELOCATION_LIBS@ \
 @ELEMENTARY_ETHUMB_LIBS@ \
 @ELEMENTARY_WEB_LIBS@ \
 @ELEMENTARY_EMAP_LIBS@ \
